--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 name: Hello, world!
-on: push
+on:
+  push:
+    branches: [ master ]
 
 jobs:
   build:
-    name: Greeting
+    name: Check the contents of the file
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
       - run: cat sample.txt
-      - run: echo "Hello, world!"
       
